<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff">

    <Button
        android:id="@+id/btn_update_odd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_odd_counter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_update_even"
        app:layout_constraintVertical_chainStyle="packed"
        />
    <Button
        android:id="@+id/btn_update_even"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_even_counter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_update_odd"
        app:layout_constraintBottom_toTopOf="@id/btn_update_user"
        app:layout_constraintVertical_chainStyle="packed"
        />
    <Button
        android:id="@+id/btn_update_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_user_model"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_update_even"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        />


</androidx.constraintlayout.widget.ConstraintLayout>